--- a/events.html
+++ b/events.html
@@ -17,12 +17,12 @@
     </header>
     <main>
         <h2>Dessert Thursday</h2>
-        <p>学习制作精美甜点，$25/person</p>
-        <a href="booking.html?event=dessert" class="btn">预订</a>
+        <p>Learn to make delicious desserts，$25/person</p>
+        <a href="booking.html?event=dessert" class="btn">Book</a>
 
         <h2>Cocktail Workshop</h2>
-        <p>调酒课程，$35/person</p>
-        <a href="booking.html?event=cocktail" class="btn">预订</a>
+        <p>Bartending courses，$35/person</p>
+        <a href="booking.html?event=cocktail" class="btn">Book</a>
     </main>
 </body>
 </html>
