--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <h2>Welcome to Sweet Encounter Cafe！</h2>
-        <p>Join our Dessert Thursday OR Cocktail Workshop，体验甜点与调酒的乐趣！</p>
+        <p>Join our Dessert Thursday OR Cocktail Workshop，Experience the joy of desserts and cocktails！</p>
         <a href="events.html" class="btn">Check out Events</a>
     </main>
 </body>
